--- a/article/symbolism_in_the_martial_arts_of_China.html
+++ b/article/symbolism_in_the_martial_arts_of_China.html
@@ -21,6 +21,23 @@
   <meta name="msapplication-TileImage" content="/icon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
   <title>Символизм в боевых искусствах Китая</title>
+  <meta content="«Тью лун би» — стена девяти драконов — символ императорской власти известный каждому китайцу. Девять драконов выражали не только уважение народа к императору..."
+        name="description"/>
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="https://kungfu.com.ua/article/symbolism_in_the_martial_arts_of_China.html" />
+  <meta property="og:title" content="Символизм в боевых искусствах Китая" />
+  <meta property="og:image" content="https://kungfu.com.ua/photo/article/2.jpg" />
+  <meta property="og:image:width" content="1999"/>
+  <meta property="og:image:height" content="1500"/>
+  <meta name="twitter:image" content="https://kungfu.com.ua/photo/article/2.jpg">
+  <meta property="vk:image" content="https://kungfu.com.ua/photo/article/2.jpg" />
+  <link rel="image_src" href="https://kungfu.com.ua/photo/article/2.jpg" />
+  <meta property="og:description" content="«Тью лун би» — стена девяти драконов — символ императорской власти известный каждому китайцу. Девять драконов выражали не только уважение народа к императору..." />
+  <meta name="twitter:description" content="«Тью лун би» — стена девяти драконов — символ императорской власти известный каждому китайцу. Девять драконов выражали не только уважение народа к императору...">
+  <meta name="twitter:title" content="Символизм в боевых искусствах Китая" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <link rel="canonical" href="https://kungfu.com.ua/article/symbolism_in_the_martial_arts_of_China.html"/>
+
   <link rel="stylesheet" type="text/css" href="/asset/stylesheet.css"/>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-29701804-1"></script>
   <script>
