--- a/article/the_link_between_Chinese_culture_and_traditional_martial_arts_schools.html
+++ b/article/the_link_between_Chinese_culture_and_traditional_martial_arts_schools.html
@@ -21,6 +21,23 @@
   <meta name="msapplication-TileImage" content="/icon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
   <title>Связь китайской культуры с традиционными школами боевых искусств</title>
+  <meta content="Впервые посещая Китай западный человек сталкивается с иной парадигмой восприятия окружающего мира, но привычка оценивать текущие события по внешним признакам долгое время не позволяет ему понять внутреннюю суть этого народа..."
+        name="description"/>
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="https://kungfu.com.ua/article/the_link_between_Chinese_culture_and_traditional_martial_arts_schools.html" />
+  <meta property="og:title" content="Связь китайской культуры с традиционными школами боевых искусств" />
+  <meta property="og:image" content="https://kungfu.com.ua/photo/article/1.jpg" />
+  <meta property="og:image:width" content="1500"/>
+  <meta property="og:image:height" content="1999"/>
+  <meta name="twitter:image" content="https://kungfu.com.ua/photo/article/1.jpg">
+  <meta property="vk:image" content="https://kungfu.com.ua/photo/article/1.jpg" />
+  <link rel="image_src" href="https://kungfu.com.ua/photo/article/1.jpg" />
+  <meta property="og:description" content="Впервые посещая Китай западный человек сталкивается с иной парадигмой восприятия окружающего мира, но привычка оценивать текущие события по внешним признакам долгое время не позволяет ему понять внутреннюю суть этого народа..." />
+  <meta name="twitter:description" content="Впервые посещая Китай западный человек сталкивается с иной парадигмой восприятия окружающего мира, но привычка оценивать текущие события по внешним признакам долгое время не позволяет ему понять внутреннюю суть этого народа...">
+  <meta name="twitter:title" content="Связь китайской культуры с традиционными школами боевых искусств" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <link rel="canonical" href="https://kungfu.com.ua/article/the_link_between_Chinese_culture_and_traditional_martial_arts_schools.html"/>
+
   <link rel="stylesheet" type="text/css" href="/asset/stylesheet.css"/>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-29701804-1"></script>
   <script>
