--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <meta name="msapplication-TileImage" content="/icon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
   <title>Харьковский культурный центр «Искусства Китая»</title>
+  <meta content="Обучение кунгфу, тайци-цюань и цигун в Харькове от мастера который несколько лет обучался у даосских монахов, самозащита и уникальные оздоровительные практики"
+        name="description"/>
   <link rel="stylesheet" type="text/css" href="/asset/stylesheet.css"/>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-29701804-1"></script>
   <script>
