--- a/article/the_link_between_Chinese_culture_and_traditional_martial_arts_schools.html
+++ b/article/the_link_between_Chinese_culture_and_traditional_martial_arts_schools.html
@@ -150,7 +150,7 @@
             </div>
 
             <p>Впервые посещая Китай западный человек сталкивается с иной парадигмой восприятия окружающего мира, но привычка оценивать текущие события по внешним признакам долгое время не позволяет ему понять внутреннюю суть этого народа. Китайцы
-              доброжелательны и терпеливы к иностранцам. Привычка скрывать свое внутреннее состояние и чувства укоренилась со времен образования китайского государства, поэтому, несмотря на вежливые улыбки, для китайцев белый человек всегда остается варваром –
+              доброжелательны и терпеливы к иностранцам. Привычка скрывать свое внутреннее состояние и чувства укоренилась со времен образования китайского государства, поэтому, несмотря на вежливые улыбки, для китайцев белый человек всегда остается варваром —
               неполноценным существом с низким уровнем ума и культуры. В Китае важно все, как вы здороваетесь, реагируете на комплименты,
               какие вопросы задаете на какие отвечаете сами из этих факторов в дальнейшем будет
               складываться ваш статус. Если вы приехали в Китай чему нибудь научиться, то лучше сначала познакомиться с китайской историей и китайской культурой. Это два столпа, вокруг которых формируется китайское общество. Если вы продемонстрируете хотя бы
