--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <a class="contact__item"
            data-action='{"category": "contact", "value": "telegram", "label": "messager"}'
            target="_blank"
-           href="tg://user?id=380661043335"><img src="/asset/i/telegram32.png" alt="telegram"/></a>
+           href="https://t.me/KungfuDojo"><img src="/asset/i/telegram32.png" alt="telegram"/></a>
         <a class="contact__item"
            data-action='{"category": "contact", "value": "mail", "label": "messager"}'
            target="_blank"
