--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
            target="_blank"
            href="https://t.me/KungfuDojo"><img src="/asset/i/telegram32.png" alt="telegram"/></a>
         <a class="contact__item"
+           data-action='{"category": "contact", "value": "instagram", "label": "photo"}'
+           target="_blank"
+           href="https://www.instagram.com/galitsaaleksandrnikolaevich/">
+          <img src="/asset/i/instagram32.png" alt="instagram"/>
+        </a>
+        <a class="contact__item"
            data-action='{"category": "contact", "value": "mail", "label": "messager"}'
            target="_blank"
            href="mailto:kungfu@kungfu.com.ua">
