--- a/practice/qigong.html
+++ b/practice/qigong.html
@@ -175,7 +175,7 @@
               от которой, маленькая китаянка наигрывала красивые мелодии на инструменте похожем
               на виолончель, создавая атмосферу спокойствия и уюта.
             </p>
-            <iframe width="750" height="480" src="https://www.youtube.com/embed/96oZHjvsA6I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="750" height="480" src="https://www.youtube.com/embed/-vpT3MZCtUU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <p>
               Я слушал Тин По, многое записывал, просто как интересную информацию, но для меня,
               тогда он был ценен прежде всего, как невольный учитель языка. Чтобы самому заняться
