--- a/article/the_link_between_Chinese_culture_and_traditional_martial_arts_schools.html
+++ b/article/the_link_between_Chinese_culture_and_traditional_martial_arts_schools.html
@@ -140,7 +140,7 @@
               <li><a href="/practice/kungfu_eme_pai.html"><span>Кунгфу</span></a></li>
               <li><a href="/practice/knife_fight.html"><span>Ножевой бой</span></a></li>
               <li><a href="/practice/qigong.html"><span>Цигун</span></a></li>
-              <li><a href="/practice/сhinese_tea_ceremony.html"><span>Чайная церемония</span></a></li>
+              <li><a href="/practice/сhinese_tea_ceremony/"><span>Чайная церемония</span></a></li>
               <li><a href="/article/"><span>Статьи</span></a></li>
               <li><a href="/photo/"><span>Фото</span></a></li>
             </ul>
