--- a/practice/сhinese_tea_ceremony/191228/index.html
+++ b/practice/сhinese_tea_ceremony/191228/index.html
@@ -9,26 +9,42 @@
   <link rel="apple-touch-icon" sizes="76x76" href="/icon/apple-icon-76x76.png">
   <link rel="apple-touch-icon" sizes="114x114" href="/icon/apple-icon-114x114.png">
   <link rel="apple-touch-icon" sizes="120x120" href="/icon/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="/icon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="138x138" href="/icon/apple-icon-138x138.png">
   <link rel="apple-touch-icon" sizes="152x152" href="/icon/apple-icon-152x152.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/icon/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="/icon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/icon/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/icon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="/icon/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/icon/favicon-16x16.png">
   <link rel="manifest" href="/icon/manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="/icon/ms-icon-144x144.png">
+  <meta name="msapplication-TileImage" content="/icon/ms-icon-138x138.png">
   <meta name="theme-color" content="#ffffff">
-  <title>Ножевой бой в Харькове</title>
+  <title>Осознание жизни</title>
+  <meta content="Даосизм -это древняя философия Китая  которая учит как  как правильно и наиболее эффективно идти по своему жизненному пути"
+        name="description"/>
+  <meta property="og:type" content="video.other" />
+  <meta property="og:url" content="https://kungfu.com.ua/practice/сhinese_tea_ceremony/191228/" />
+  <meta property="og:title" content="Осознание жизни" />
+  <meta property="og:image" content="https://kungfu.com.ua/photo/china/IMG_2456_thumb.jpg" />
+  <meta property="og:image:width" content="450"/>
+  <meta property="og:image:height" content="600"/>
+  <meta name="twitter:image" content="https://kungfu.com.ua/photo/china/IMG_2456_thumb.jpg">
+  <meta property="vk:image" content="https://kungfu.com.ua/photo/china/IMG_2456_thumb.jpg" />
+  <link rel="image_src" href="https://kungfu.com.ua/photo/china/IMG_2456_thumb.jpg" />
+  <meta property="og:description" content="Даосизм -это древняя философия Китая  которая учит как  как правильно и наиболее эффективно идти по своему жизненному пути" />
+  <meta name="twitter:description" content="Даосизм -это древняя философия Китая  которая учит как  как правильно и наиболее эффективно идти по своему жизненному пути">
+  <meta name="twitter:title" content="Осознание жизни" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <link rel="canonical" href="https://kungfu.com.ua/practice/сhinese_tea_ceremony/191228/"/>
+
   <link rel="stylesheet" type="text/css" href="/asset/stylesheet.css"/>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-29701804-1"></script>
   <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-29701804-1');
+    window.dataLayer = window.dataLayer || []
+    function gtag () {dataLayer.push(arguments)}
+    gtag('js', new Date())
+    gtag('config', 'UA-29701804-1')
   </script>
   <script src="/asset/script.js"></script>
 </head>
@@ -130,12 +146,20 @@
             </ul>
           </div>
           <div id="content">
-            <h1 class="h1Title">Ножевой бой</h1>
-            <p>Владение китайской техникой ножевого боя позволяет в экстремальной ситуации грамотно защитить свое здоровье и жизнь,
-              не нанося оппоненту опасных для жизни травм и увечий, а только причиняя ему значительные болевые ощущения, приводящие к ограничению подвижности,
-              осознаю своей беспомощности и снижению уровня агрессии.</p>
-            <iframe width="740" height="480" src="https://www.youtube.com/embed/rS206tYbJoA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
+            <h1 class="h1Title">Осознание жизни</h1>
+            <div style="text-align: center;">
+              <iframe width="740" height="480" src="https://www.youtube.com/embed/R5YZs1iiJ9o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+          <div id="disqus_thread"></div>
+          <script>
+            (function() {
+              var d = document, s = d.createElement('script');
+              s.src = 'https://kungfu-dojo.disqus.com/embed.js';
+              s.setAttribute('data-timestamp', +new Date());
+              (d.head || d.body).appendChild(s);
+            })();
+          </script>
+          <noscript>Для комментариев необходим JavaScript</noscript>
         </td>
         <td class="borderright">
           &nbsp;
