--- a/practice/сhinese_tea_ceremony/index.html
+++ b/practice/сhinese_tea_ceremony/index.html
@@ -124,9 +124,9 @@
                             <li><a href="/practice/kungfu_eme_pai.html"><span>Кунгфу</span></a></li>
                             <li><a href="/practice/knife_fight.html"><span>Ножевой бой</span></a></li>
                             <li><a href="/practice/qigong.html"><span>Цигун</span></a></li>
-                            <li><a href="/practice/сhinese_tea_ceremony.html"><span>Чайная церемония</span></a></li>
-                            <li><a href="/article/"><span>Статьи</span></a></li>
-                            <li><a href="/photo/"><span>Фото</span></a></li>
+                            <li><a href="/practice/сhinese_tea_ceremony/"><span>Чайная церемония</span></a></li>
+                            <li><a href="/article"><span>Статьи</span></a></li>
+                            <li><a href="/photo"><span>Фото</span></a></li>
                         </ul>
                     </div>
                     <div id="content">
@@ -136,13 +136,32 @@
                             к гармонии взаимоотношения со своими близкими, поделиться с другими спокойствием
                             и душевным равновесием
                         </p>
-                        <br />
-                        <div style="text-align: center;">
-                            <iframe width="740" height="480" src="https://www.youtube.com/embed/hl6nuwdqri8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                            <iframe width="740" height="480" src="https://www.youtube.com/embed/R5YZs1iiJ9o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                            <iframe width="740" height="480" src="https://www.youtube.com/embed/eKHvFqLf1rA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
-
+                      <ul class="list">
+                        <li class="list__item" >
+                          <a class="link"
+                             href="/practice/сhinese_tea_ceremony/200128/">
+                            <span class="list__text">Традиционные китайские школы боевых искусств</span>
+                          </a>
+                        </li>
+                        <li class="list__item" >
+                          <a class="link"
+                             href="/practice/сhinese_tea_ceremony/200113/">
+                            <span class="list__text">Почему и как китайцы занимаются боевыми искусствами</span>
+                          </a>
+                        </li>
+                        <li class="list__item" >
+                          <a class="link"
+                             href="/practice/сhinese_tea_ceremony/191228/">
+                            <span class="list__text">Осознание жизни</span>
+                          </a>
+                        </li>
+                        <li class="list__item" >
+                          <a class="link"
+                             href="/practice/сhinese_tea_ceremony/191213/">
+                            <span class="list__text">Боевое искусство нунчаку</span>
+                          </a>
+                        </li>
+                      </ul>
                     </div>
                 </td>
                 <td class="borderright">
