--- a/practice/chinese_tea_ceremony/191213/index.html
+++ b/practice/chinese_tea_ceremony/191213/index.html
@@ -20,23 +20,23 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/icon/ms-icon-138x138.png">
   <meta name="theme-color" content="#ffffff">
-  <title>Осознание жизни</title>
-  <meta content="Даосизм -это древняя философия Китая  которая учит как  как правильно и наиболее эффективно идти по своему жизненному пути"
+  <title>Боевое искусство нунчаку</title>
+  <meta content="Китайское боевое искусство, это умение победить противника, нанося минимальный ущерб его  здоровью"
         name="description"/>
   <meta property="og:type" content="video.other" />
-  <meta property="og:url" content="https://kungfu.com.ua/practice/сhinese_tea_ceremony/191228/" />
-  <meta property="og:title" content="Осознание жизни" />
-  <meta property="og:image" content="https://kungfu.com.ua/photo/china/IMG_2456_thumb.jpg" />
-  <meta property="og:image:width" content="450"/>
-  <meta property="og:image:height" content="600"/>
-  <meta name="twitter:image" content="https://kungfu.com.ua/photo/china/IMG_2456_thumb.jpg">
-  <meta property="vk:image" content="https://kungfu.com.ua/photo/china/IMG_2456_thumb.jpg" />
-  <link rel="image_src" href="https://kungfu.com.ua/photo/china/IMG_2456_thumb.jpg" />
-  <meta property="og:description" content="Даосизм -это древняя философия Китая  которая учит как  как правильно и наиболее эффективно идти по своему жизненному пути" />
-  <meta name="twitter:description" content="Даосизм -это древняя философия Китая  которая учит как  как правильно и наиболее эффективно идти по своему жизненному пути">
-  <meta name="twitter:title" content="Осознание жизни" />
+  <meta property="og:url" content="https://kungfu.com.ua/practice/chinese_tea_ceremony/191213/" />
+  <meta property="og:title" content="Боевое искусство нунчаку" />
+  <meta property="og:image" content="https://kungfu.com.ua/photo/practice/a_35.jpg" />
+  <meta property="og:image:width" content="600"/>
+  <meta property="og:image:height" content="450"/>
+  <meta name="twitter:image" content="https://kungfu.com.ua/photo/practice/a_35.jpg">
+  <meta property="vk:image" content="https://kungfu.com.ua/photo/practice/a_35.jpg" />
+  <link rel="image_src" href="https://kungfu.com.ua/photo/practice/a_35.jpg" />
+  <meta property="og:description" content="Китайское боевое искусство, это умение победить противника, нанося минимальный ущерб его  здоровью" />
+  <meta name="twitter:description" content="Китайское боевое искусство, это умение победить противника, нанося минимальный ущерб его  здоровью">
+  <meta name="twitter:title" content="Боевое искусство нунчаку" />
   <meta name="twitter:card" content="summary_large_image" />
-  <link rel="canonical" href="https://kungfu.com.ua/practice/сhinese_tea_ceremony/191228/"/>
+  <link rel="canonical" href="https://kungfu.com.ua/practice/chinese_tea_ceremony/191213/"/>
 
   <link rel="stylesheet" type="text/css" href="/asset/stylesheet.css"/>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-29701804-1"></script>
@@ -140,15 +140,15 @@
               <li><a href="/practice/kungfu_eme_pai.html"><span>Кунгфу</span></a></li>
               <li><a href="/practice/knife_fight.html"><span>Ножевой бой</span></a></li>
               <li><a href="/practice/qigong.html"><span>Цигун</span></a></li>
-              <li><a href="/practice/сhinese_tea_ceremony/"><span>Чайная церемония</span></a></li>
+              <li><a href="/practice/chinese_tea_ceremony/"><span>Чайная церемония</span></a></li>
               <li><a href="/article/"><span>Статьи</span></a></li>
               <li><a href="/photo/"><span>Фото</span></a></li>
             </ul>
           </div>
           <div id="content">
-            <h1 class="h1Title">Осознание жизни</h1>
+            <h1 class="h1Title">Боевое искусство нунчаку</h1>
             <div style="text-align: center;">
-              <iframe width="740" height="480" src="https://www.youtube.com/embed/R5YZs1iiJ9o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe width="740" height="480" src="https://www.youtube.com/embed/eKHvFqLf1rA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
           <div id="disqus_thread"></div>
           <script>
