--- a/practice/chinese_tea_ceremony/200113/index.html
+++ b/practice/chinese_tea_ceremony/200113/index.html
@@ -24,7 +24,7 @@
   <meta content="Почему и как китайцы занимаются боевыми искусствами путевые заметки во время жизни в Китае"
         name="description"/>
   <meta property="og:type" content="video.other" />
-  <meta property="og:url" content="https://kungfu.com.ua/practice/сhinese_tea_ceremony/200113/" />
+  <meta property="og:url" content="https://kungfu.com.ua/practice/chinese_tea_ceremony/200113/" />
   <meta property="og:title" content="Почему и как китайцы занимаются боевыми искусствами" />
   <meta property="og:image" content="https://kungfu.com.ua/photo/china/38.jpg" />
   <meta property="og:image:width" content="1407"/>
@@ -36,7 +36,7 @@
   <meta name="twitter:description" content="Почему и как китайцы занимаются боевыми искусствами путевые заметки во время жизни в Китае">
   <meta name="twitter:title" content="Почему и как китайцы занимаются боевыми искусствами" />
   <meta name="twitter:card" content="summary_large_image" />
-  <link rel="canonical" href="https://kungfu.com.ua/practice/сhinese_tea_ceremony/200113/"/>
+  <link rel="canonical" href="https://kungfu.com.ua/practice/chinese_tea_ceremony/200113/"/>
 
   <link rel="stylesheet" type="text/css" href="/asset/stylesheet.css"/>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-29701804-1"></script>
@@ -140,7 +140,7 @@
               <li><a href="/practice/kungfu_eme_pai.html"><span>Кунгфу</span></a></li>
               <li><a href="/practice/knife_fight.html"><span>Ножевой бой</span></a></li>
               <li><a href="/practice/qigong.html"><span>Цигун</span></a></li>
-              <li><a href="/practice/сhinese_tea_ceremony/"><span>Чайная церемония</span></a></li>
+              <li><a href="/practice/chinese_tea_ceremony/"><span>Чайная церемония</span></a></li>
               <li><a href="/article/"><span>Статьи</span></a></li>
               <li><a href="/photo/"><span>Фото</span></a></li>
             </ul>
