--- a/practice/chinese_tea_ceremony/index.html
+++ b/practice/chinese_tea_ceremony/index.html
@@ -124,7 +124,7 @@
                             <li><a href="/practice/kungfu_eme_pai.html"><span>Кунгфу</span></a></li>
                             <li><a href="/practice/knife_fight.html"><span>Ножевой бой</span></a></li>
                             <li><a href="/practice/qigong.html"><span>Цигун</span></a></li>
-                            <li><a href="/practice/сhinese_tea_ceremony/"><span>Чайная церемония</span></a></li>
+                            <li><a href="/practice/chinese_tea_ceremony/"><span>Чайная церемония</span></a></li>
                             <li><a href="/article"><span>Статьи</span></a></li>
                             <li><a href="/photo"><span>Фото</span></a></li>
                         </ul>
@@ -139,25 +139,25 @@
                       <ul class="list">
                         <li class="list__item" >
                           <a class="link"
-                             href="/practice/сhinese_tea_ceremony/200128/">
+                             href="/practice/chinese_tea_ceremony/200128/">
                             <span class="list__text">Традиционные китайские школы боевых искусств</span>
                           </a>
                         </li>
                         <li class="list__item" >
                           <a class="link"
-                             href="/practice/сhinese_tea_ceremony/200113/">
+                             href="/practice/chinese_tea_ceremony/200113/">
                             <span class="list__text">Почему и как китайцы занимаются боевыми искусствами</span>
                           </a>
                         </li>
                         <li class="list__item" >
                           <a class="link"
-                             href="/practice/сhinese_tea_ceremony/191228/">
+                             href="/practice/chinese_tea_ceremony/191228/">
                             <span class="list__text">Осознание жизни</span>
                           </a>
                         </li>
                         <li class="list__item" >
                           <a class="link"
-                             href="/practice/сhinese_tea_ceremony/191213/">
+                             href="/practice/chinese_tea_ceremony/191213/">
                             <span class="list__text">Боевое искусство нунчаку</span>
                           </a>
                         </li>
