--- a/practice/chinese_tea_ceremony/191228/index.html
+++ b/practice/chinese_tea_ceremony/191228/index.html
@@ -9,7 +9,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href="/icon/apple-icon-76x76.png">
   <link rel="apple-touch-icon" sizes="114x114" href="/icon/apple-icon-114x114.png">
   <link rel="apple-touch-icon" sizes="120x120" href="/icon/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="/icon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="138x138" href="/icon/apple-icon-138x138.png">
   <link rel="apple-touch-icon" sizes="152x152" href="/icon/apple-icon-152x152.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/icon/apple-icon-180x180.png">
   <link rel="icon" type="image/png" sizes="192x192" href="/icon/android-icon-192x192.png">
@@ -18,25 +18,25 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/icon/favicon-16x16.png">
   <link rel="manifest" href="/icon/manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="/icon/ms-icon-144x144.png">
+  <meta name="msapplication-TileImage" content="/icon/ms-icon-138x138.png">
   <meta name="theme-color" content="#ffffff">
-  <title>Традиционные китайские школы боевых искусств</title>
-  <meta content="История , культура и философия  , первые ступени на пути  понимания  сути  традиции китайского боевого искусства"
+  <title>Осознание жизни</title>
+  <meta content="Даосизм -это древняя философия Китая  которая учит как  как правильно и наиболее эффективно идти по своему жизненному пути"
         name="description"/>
   <meta property="og:type" content="video.other" />
-  <meta property="og:url" content="https://kungfu.com.ua/practice/сhinese_tea_ceremony/200128/" />
-  <meta property="og:title" content="Традиционные китайские школы боевых искусств" />
-  <meta property="og:image" content="https://kungfu.com.ua/photo/china/44.jpg" />
-  <meta property="og:image:width" content="600"/>
-  <meta property="og:image:height" content="400"/>
-  <meta name="twitter:image" content="https://kungfu.com.ua/photo/china/44.jpg">
-  <meta property="vk:image" content="https://kungfu.com.ua/photo/china/44.jpg" />
-  <link rel="image_src" href="https://kungfu.com.ua/photo/china/44.jpg" />
-  <meta property="og:description" content="История , культура и философия  , первые ступени на пути  понимания  сути  традиции китайского боевого искусства" />
-  <meta name="twitter:description" content="История , культура и философия  , первые ступени на пути  понимания  сути  традиции китайского боевого искусства">
-  <meta name="twitter:title" content="Традиционные китайские школы боевых искусств" />
+  <meta property="og:url" content="https://kungfu.com.ua/practice/chinese_tea_ceremony/191228/" />
+  <meta property="og:title" content="Осознание жизни" />
+  <meta property="og:image" content="https://kungfu.com.ua/photo/china/IMG_2456_thumb.jpg" />
+  <meta property="og:image:width" content="450"/>
+  <meta property="og:image:height" content="600"/>
+  <meta name="twitter:image" content="https://kungfu.com.ua/photo/china/IMG_2456_thumb.jpg">
+  <meta property="vk:image" content="https://kungfu.com.ua/photo/china/IMG_2456_thumb.jpg" />
+  <link rel="image_src" href="https://kungfu.com.ua/photo/china/IMG_2456_thumb.jpg" />
+  <meta property="og:description" content="Даосизм -это древняя философия Китая  которая учит как  как правильно и наиболее эффективно идти по своему жизненному пути" />
+  <meta name="twitter:description" content="Даосизм -это древняя философия Китая  которая учит как  как правильно и наиболее эффективно идти по своему жизненному пути">
+  <meta name="twitter:title" content="Осознание жизни" />
   <meta name="twitter:card" content="summary_large_image" />
-  <link rel="canonical" href="https://kungfu.com.ua/practice/сhinese_tea_ceremony/200128/"/>
+  <link rel="canonical" href="https://kungfu.com.ua/practice/chinese_tea_ceremony/191228/"/>
 
   <link rel="stylesheet" type="text/css" href="/asset/stylesheet.css"/>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-29701804-1"></script>
@@ -140,15 +140,15 @@
               <li><a href="/practice/kungfu_eme_pai.html"><span>Кунгфу</span></a></li>
               <li><a href="/practice/knife_fight.html"><span>Ножевой бой</span></a></li>
               <li><a href="/practice/qigong.html"><span>Цигун</span></a></li>
-              <li><a href="/practice/сhinese_tea_ceremony/"><span>Чайная церемония</span></a></li>
+              <li><a href="/practice/chinese_tea_ceremony/"><span>Чайная церемония</span></a></li>
               <li><a href="/article/"><span>Статьи</span></a></li>
               <li><a href="/photo/"><span>Фото</span></a></li>
             </ul>
           </div>
           <div id="content">
-            <h1 class="h1Title">Традиционные китайские школы боевых искусств</h1>
+            <h1 class="h1Title">Осознание жизни</h1>
             <div style="text-align: center;">
-              <iframe width="740" height="480" src="https://www.youtube.com/embed/KM7HlYK6hng" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe width="740" height="480" src="https://www.youtube.com/embed/R5YZs1iiJ9o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
           <div id="disqus_thread"></div>
           <script>
