--- a/practice/сhinese_tea_ceremony.html
+++ b/practice/сhinese_tea_ceremony.html
@@ -1,5 +1,5 @@
 <head>
-  <meta http-equiv="refresh" content="1;URL=https://kungfu.com.ua/practice/сhinese_tea_ceremony/"/>
+  <meta http-equiv="refresh" content="1;URL=https://kungfu.com.ua/practice/chinese_tea_ceremony/"/>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-29701804-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
