--- a/index.html
+++ b/index.html
@@ -626,6 +626,27 @@
               проектах, посвященных оздоровлению человека. Его деятельность освещалась телеканалами
               в&nbsp;программах посвященных здоровому образу жизни в которых подчеркивалась эффективность
               и простота в освоении этих древних технологий оздоровления.</p>
+            <h2 class="importantText">Обновления</h2>
+            <ul class="list">
+              <li class="list__item" >
+                <a class="link"
+                   href="/practice/chinese_tea_ceremony/200128/">
+                  <span class="list__text">Китайская чайная церемония — Традиционные китайские школы боевых искусств</span>
+                </a>
+              </li>
+              <li class="list__item" >
+                <a class="link"
+                   href="/article/the_link_between_Chinese_culture_and_traditional_martial_arts_schools.html">
+                  <span class="list__text">Статья — Связь китайской культуры с традиционными школами боевых искусств</span>
+                </a>
+              </li>
+              <li class="list__item" >
+                <a class="link"
+                   href="/article/symbolism_in_the_martial_arts_of_China.html">
+                  <span class="list__text">Статья — Символизм в боевых искусствах Китая</span>
+                </a>
+              </li>
+            </ul>
           </div>
         </td>
         <td class="borderright">
