--- a/index.html
+++ b/index.html
@@ -627,6 +627,9 @@
               в&nbsp;программах посвященных здоровому образу жизни в которых подчеркивалась эффективность
               и простота в освоении этих древних технологий оздоровления.</p>
             <h2 class="importantText">Обновления</h2>
+            <p>Подписывайтесь на <a data-action='{"category": "contact", "value": "telegram", "label": "messager"}'
+                                    target="_blank"
+                                    href="https://t.me/KungfuDojo">наш канал в Telegram<img src="/asset/i/telegram32.png" alt="telegram"/></a>, чтобы быть в курсе всех обновлений и предстоящий мероприятий.</p>
             <ul class="list">
               <li class="list__item" >
                 <a class="link"
