--- a/practice/kungfu_eme_pai.html
+++ b/practice/kungfu_eme_pai.html
@@ -151,7 +151,7 @@
                           стабильное психологическое состояние в экстремальной ситуации. Практикуя стиль Эмэй
                           вы, постепенно, «прорабатываете» свой организм, достигая состояния устойчивого здоровья
                           и повышенной мобильности.</p>
-                      <iframe width="750" height="640" src="https://www.youtube.com/embed/m0iq1kh6OWo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                      <iframe width="750" height="640" src="https://www.youtube.com/embed/Hp4KjfwQMeE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   </div>
               </td>
               <td class="borderright">
