--- a/practice/chinese_tea_ceremony/200128/index.html
+++ b/practice/chinese_tea_ceremony/200128/index.html
@@ -26,12 +26,12 @@
   <meta property="og:type" content="video.other" />
   <meta property="og:url" content="https://kungfu.com.ua/practice/chinese_tea_ceremony/200128/" />
   <meta property="og:title" content="Традиционные китайские школы боевых искусств" />
-  <meta property="og:image" content="https://kungfu.com.ua/photo/30.jpg" />
-  <meta property="og:image:width" content="2048"/>
-  <meta property="og:image:height" content="1536"/>
-  <meta name="twitter:image" content="https://kungfu.com.ua/photo/china/44.jpg">
-  <meta property="vk:image" content="https://kungfu.com.ua/photo/china/44.jpg" />
-  <link rel="image_src" href="https://kungfu.com.ua/photo/china/44.jpg" />
+  <meta property="og:image" content="https://kungfu.com.ua/photo/22.jpg" />
+  <meta property="og:image:width" content="600"/>
+  <meta property="og:image:height" content="450"/>
+  <meta name="twitter:image" content="https://kungfu.com.ua/photo/22.jpg">
+  <meta property="vk:image" content="https://kungfu.com.ua/photo/22.jpg" />
+  <link rel="image_src" href="https://kungfu.com.ua/photo/22.jpg" />
   <meta property="og:description" content="История, культура и философия, первые ступени на пути  понимания  сути  традиции китайского боевого искусства" />
   <meta name="twitter:description" content="История, культура и философия, первые ступени на пути  понимания  сути  традиции китайского боевого искусства">
   <meta name="twitter:title" content="Традиционные китайские школы боевых искусств" />
