--- a/practice/chinese_tea_ceremony/191213/index.html
+++ b/practice/chinese_tea_ceremony/191213/index.html
@@ -26,12 +26,12 @@
   <meta property="og:type" content="video.other" />
   <meta property="og:url" content="https://kungfu.com.ua/practice/chinese_tea_ceremony/191213/" />
   <meta property="og:title" content="Боевое искусство нунчаку" />
-  <meta property="og:image" content="https://kungfu.com.ua/photo/practice/a_35.jpg" />
-  <meta property="og:image:width" content="600"/>
-  <meta property="og:image:height" content="450"/>
-  <meta name="twitter:image" content="https://kungfu.com.ua/photo/practice/a_35.jpg">
-  <meta property="vk:image" content="https://kungfu.com.ua/photo/practice/a_35.jpg" />
-  <link rel="image_src" href="https://kungfu.com.ua/photo/practice/a_35.jpg" />
+  <meta property="og:image" content="https://i.ytimg.com/vi/eKHvFqLf1rA/hqdefault.jpg" />
+  <meta property="og:image:width" content="480" />
+  <meta property="og:image:height" content="360" />
+  <meta name="twitter:image" content="https://i.ytimg.com/vi/eKHvFqLf1rA/hqdefault.jpg" />
+  <meta property="vk:image" content="https://i.ytimg.com/vi/eKHvFqLf1rA/hqdefault.jpg" />
+  <link rel="image_src" href="https://i.ytimg.com/vi/eKHvFqLf1rA/hqdefault.jpg" />
   <meta property="og:description" content="Китайское боевое искусство, это умение победить противника, нанося минимальный ущерб его  здоровью" />
   <meta name="twitter:description" content="Китайское боевое искусство, это умение победить противника, нанося минимальный ущерб его  здоровью">
   <meta name="twitter:title" content="Боевое искусство нунчаку" />
