--- a/article/index.html
+++ b/article/index.html
@@ -132,6 +132,12 @@
             <ul class="list">
               <li class="list__item" >
                 <a class="link"
+                   href="/article/200216/">
+                  <span class="list__text">Китайские боевые искусства в современном мире</span>
+                </a>
+              </li>
+              <li class="list__item" >
+                <a class="link"
                    href="/article/the_link_between_Chinese_culture_and_traditional_martial_arts_schools.html">
                   <span class="list__text">Связь китайской культуры с традиционными школами боевых искусств</span>
                 </a>
