--- a/index.html
+++ b/index.html
@@ -204,6 +204,12 @@
             <ul class="list">
               <li class="list__item" >
                 <a class="link"
+                   href="/article/200216/">
+                  <span class="list__text">Китайские боевые искусства в современном мире</span>
+                </a>
+              </li>
+              <li class="list__item" >
+                <a class="link"
                    href="/practice/chinese_tea_ceremony/200128/">
                   <span class="list__text">Китайская чайная церемония — Традиционные китайские школы боевых искусств</span>
                 </a>
