--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
               <li class="list__item" >
                 <a class="link"
                    href="/article/200216/">
-                  <span class="list__text">Китайские боевые искусства в современном мире</span>
+                  <span class="list__text">Статья — Китайские боевые искусства в современном мире</span>
                 </a>
               </li>
               <li class="list__item" >
