--- a/practice/chinese_tea_ceremony/index.html
+++ b/practice/chinese_tea_ceremony/index.html
@@ -138,26 +138,32 @@
                       <ul class="list">
                         <li class="list__item" >
                           <a class="link"
+                             href="/practice/chinese_tea_ceremony/200222/">
+                            <span class="list__text">(Анонс) 20.02.22 — Даоские практики обращения к духовным сущностям</span>
+                          </a>
+                        </li>
+                        <li class="list__item" >
+                          <a class="link"
                              href="/practice/chinese_tea_ceremony/200128/">
-                            <span class="list__text">Традиционные китайские школы боевых искусств</span>
+                            <span class="list__text">20.01.28 — Традиционные китайские школы боевых искусств</span>
                           </a>
                         </li>
                         <li class="list__item" >
                           <a class="link"
                              href="/practice/chinese_tea_ceremony/200113/">
-                            <span class="list__text">Почему и как китайцы занимаются боевыми искусствами</span>
+                            <span class="list__text">20.01.13 — Почему и как китайцы занимаются боевыми искусствами</span>
                           </a>
                         </li>
                         <li class="list__item" >
                           <a class="link"
                              href="/practice/chinese_tea_ceremony/191228/">
-                            <span class="list__text">Осознание жизни</span>
+                            <span class="list__text">19.12.28 — Осознание жизни</span>
                           </a>
                         </li>
                         <li class="list__item" >
                           <a class="link"
                              href="/practice/chinese_tea_ceremony/191213/">
-                            <span class="list__text">Боевое искусство нунчаку</span>
+                            <span class="list__text">19.12.13 — Боевое искусство нунчаку</span>
                           </a>
                         </li>
                       </ul>
