--- a/index.html
+++ b/index.html
@@ -204,6 +204,12 @@
             <ul class="list">
               <li class="list__item" >
                 <a class="link"
+                   href="/practice/chinese_tea_ceremony/200222/">
+                  <span class="list__text">(Анонс) 20.02.22 — Китайская чайная церемония — Даоские практики обращения к духовным сущностям</span>
+                </a>
+              </li>
+              <li class="list__item" >
+                <a class="link"
                    href="/article/200216/">
                   <span class="list__text">Статья — Китайские боевые искусства в современном мире</span>
                 </a>
