--- a/practice/chinese_tea_ceremony/200222/index.html
+++ b/practice/chinese_tea_ceremony/200222/index.html
@@ -20,11 +20,11 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/icon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
-  <title>Даоские практики обращения к духовным сущностям</title>
+  <title>(Анонс) Даоские практики обращения к духовным сущностям</title>
   <meta content="Анонс предстоящей чайной церемонии на тему Даоские практики обращения к духовным сущностям"/>
   <meta property="og:type" content="video.other" />
   <meta property="og:url" content="https://kungfu.com.ua/practice/chinese_tea_ceremony/200222/" />
-  <meta property="og:title" content="Даоские практики обращения к духовным сущностям" />
+  <meta property="og:title" content="(Анонс) Даоские практики обращения к духовным сущностям" />
   <meta property="og:image" content="https://kungfu.com.ua/photo/ceremony/200222.jpg" />
   <meta property="og:image:width" content="1600"/>
   <meta property="og:image:height" content="1200"/>
@@ -33,7 +33,7 @@
   <link rel="image_src" href="https://kungfu.com.ua/photo/ceremony/200222.jpg" />
   <meta property="og:description" content="Анонс предстоящей чайной церемонии на тему Даоские практики обращения к духовным сущностям" />
   <meta name="twitter:description" content="Анонс предстоящей чайной церемонии на тему Даоские практики обращения к духовным сущностям">
-  <meta name="twitter:title" content="Даоские практики обращения к духовным сущностям" />
+  <meta name="twitter:title" content="(Анонс) Даоские практики обращения к духовным сущностям" />
   <meta name="twitter:card" content="summary_large_image" />
   <link rel="canonical" href="https://kungfu.com.ua/practice/chinese_tea_ceremony/200222/"/>
 
