--- a/practice/chinese_tea_ceremony/200222/index.html
+++ b/practice/chinese_tea_ceremony/200222/index.html
@@ -145,7 +145,10 @@
           </div>
           <div id="content">
             <h1 class="h1Title">(Анонс) Даоские практики обращения к духовным сущностям</h1>
-            <p>Задавайте вопросы, постараемся рассмотреть их на встрече.</p>
+            <p>Ниже в комментариях у вас есть возможность задать свои вопросы заранее, постараемся рассмотреть их на встрече и приходите будем рады Вас видеть.</p>
+            <div style="text-align: center;">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2563.6031745236514!2d36.20593201571584!3d50.01879257941812!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf945ea25f57d191a!2z0JrRg9C70YzRgtGD0YDQvdGL0Lkg0KbQtdC90YLRgCDCq9CY0YHQutGD0YHRgdGC0LLQsCDQmtC40YLQsNGPwrs!5e0!3m2!1sru!2sua!4v1582283948259!5m2!1sru!2sua" width="740" height="480" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+            </div>
             <div id="disqus_thread"></div>
             <script>
               (function() {
