update tai chi quan

--- a/practice/tai_chi_quan.html
+++ b/practice/tai_chi_quan.html
@@ -130,29 +130,13 @@
                     </div>
                     <div id="content">
                         <h1 class="h1Title">Тайцзицюань</h1>
-                        <p>
-                            В переводе с китайского - Гимнастика Великого Предела возникла из оздоровительных
-                            практик древней китайской медицины, таких как Даоинь, Туна и Цигун, в которых делался
-                            упор на активизацию естественных биологических возможностей человека, что бы предотвратить
-                            болезнь и улучшить общее состояние организма, а если организм все же поражен недугом,
-                            ликвидировать первопричину и установить утраченную гармонию с природой. Тайдзицюань
-                            – это прежде всего оздоровительная работа над собой, которая позволяет улучшить
-                            функциональность внутренних органов, пробить каналы управления и действия (думай
-                            и женьмай), связать каналы опоясывающий и пронизывающий (даймай и чунмай), обеспечивая
-                            гармонизацию энергии (ци) и силы(ли), акцентирует внимание на внутренней крепости
-                            усиливает тело, для освоения хитроумных приемов самозащиты, которые позволяют противостоять
-                            даже нескольким более сильным противникам. В трактате тайцзыцюань основная идея
-                            системы выражена в словах:
-                        </p>
-                        <p>
-                            Сердце – хозяин страны князь пяти плотво</p>
-                        <p>
-                            Восприняв мысль, динамичная и статичная ци приобретает действенность.</p>
-                        <p>
-                            Постоянноспособное действовать не знает старости,</p>
-                        <p>
-                            Подобно черепахе привлекает ци к корню души лин.
-                        </p>
+                        <p>Ушу — переводится как «искусство», но перевод не совсем точно отражает смысловую нагрузку этого термина. Китайское искусство всегда подразумевает некий уровень мастерства, приобретенный в процессе обучения у учителя обладающего полным объемом системных знаний и навыков в данной области. До этого уровня вы не можете подняться путем собственных измышлений или телесного опыта. Традиционный школы искусств испытанные временем это результат коллективного труда многих поколений экспертов в разных областях знания, объединенных общей целью. Поэтому набор элементов, составляющих всю систему выверен количественно, здесь нельзя что-то добавить или убрать, нельзя что-то выучить, а чего-то не уметь. Это похоже на шахматы, в них нет ни одной лишней фигуры и каждая ходит по своему алгоритму, подчиняясь общему замыслу. Качество функционирования всей системы определяется мастерством игрока — умением комбинировать построением фигур на шахматной доске. для создания постоянной угрозы ведущей к окончательной победе. Стиль Тайцзицюань является наиболее сложной и глубоко разработанной системой китайского боевого искусства поэтому он очень эффективен как оздоровительная практика и система самозащиты. Техника Тайцзи возникла и развивалась в русле философской доктрины Даосизма, упражнения были разработаны в соответствии с канонами древней китайской медицины.</p>
+                        <p>На первом этапе обучения акцент делается на коррекцию формы тела, развитие подвижности суставов, пластики позвоночника. Затем изучается культура движения — все тело должно работать как единое целое, двигаясь медленно, непрерывно и с наполнением силой.<p>
+                        <p>Следующий уровень это подробное изучение приемов воздействия на противника, отработка навыков ведения поединка, тактика и стратегия боя.<p>
+                        <p>Потом изучаются техники дыхание, что существенно повышает выносливость и стабилизирует работу ума.</p>
+                        <p>Последний уровень это работа с энергией своего тела, наполнение и взаимодействие с внешними потоками Ци.</p>
+                        <p>Если вы изучали все правильно и все ваши навыки гармонично дополняют друг друга, то жизнеспособность вашего тела и ума повышаются, что ведет к долголетию.</p>
+                        <p>В Китае Тайцзицюань практикуют миллионы, но мастеров обладающих полным объемом знаний этой системы немного, после 10 лет жизни в Китае случай помог мне встретить такого человека и вот уже 25 лет я изучаю эту практику, а теперь приглашаю всех желающих приобщиться этой традиции.</p>
                         <iframe width="750" height="480" src="https://www.youtube.com/embed/-M4zSrpqLnc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </td>
