change main photo

--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
                            data-nav="thumbs"
                            data-loop="true"
                            class="fotorama">
+                        <a href="/photo/2683.jpg" data-thumb="/photo/thumb/2683.jpg" target="_blank"><img src="/photo/thumb/2683.jpg" alt="мастер"></a>
                         <a href="/photo/1.jpg" data-thumb="/photo/1.jpg" target="_blank"><img src="/photo/1.jpg" alt="мастер"></a>
                         <a href="/photo/2.jpg" data-thumb="/photo/2.jpg" target="_blank"></a>
                         <a href="/photo/3.jpg" data-thumb="/photo/3.jpg" target="_blank"></a>
